// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> render matches default link snapshot 1`] = `
<styled.div
  bold={false}
  inverse={false}
  spaced={false}
>
  <Link
    replace={false}
    to="/"
  />
</styled.div>
`;

exports[`<Link /> render matches inverse link snapshot 1`] = `
<styled.div
  bold={false}
  inverse={true}
  spaced={false}
>
  <Link
    replace={false}
    to="/"
  />
</styled.div>
`;
